Updated reality and shell is working now

--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "Certainly! Here's a comprehensive description for the PS World GitHub repository:",
   "main": "index.js",
+  "workspaces": [
+    "shell"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:shell":"cd shell && npm start",
+    "install:all": "npm run install:shell"
   },
   "author": "",
   "license": "ISC"
