--- a/pschat/package.json
+++ b/pschat/package.json
@@ -10,8 +10,8 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack Herrington",
-    "email": "jherr@pobox.com"
+    "name": "Sunil Goyal",
+    "email": "goyalsunil452@gmail.com"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
