--- a/shell/package.json
+++ b/shell/package.json
@@ -10,8 +10,8 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Jack Herrington",
-    "email": "jherr@pobox.com"
+    "name": "Prajakta Selukar",
+    "email": "pselukar9@gmail.com"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
